deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-app
  namespace: workspace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-app
  template:
    metadata:
      labels:
        app: booking-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: booking-app
          image: ghcr.io/byesummer/booking-app:e229c68c3cd09d99f880e16f794448695a2d00f8
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
