service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-app-service
  namespace: workspace
spec:
  selector:
    app: booking-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
